force-app/main/default/objects/Contact_Certifications__c/Contact_Certifications__c.object-meta.xml
<CustomObject>
    <description>Junction object between Contacts and Certs objects.</description>
    <label>Contact Certification</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Contact Certification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>