force-app/main/default/objects/Contact_Certifications__c/fields/Captured_in_Partner_Community__c.field-meta.xml
<CustomField>
    <fullName>Captured_in_Partner_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Track which certifications have not yet been recognized</description>
    <label>Captured in Partner Community</label>
    <type>Checkbox</type>
</CustomField>