force-app/main/default/objects/Contact_Certifications__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <description>Duplicate Certification field for reporting purposes</description>
    <formula>Certs__r.Name</formula>
    <inlineHelpText>Duplicate Certification field for reporting purposes</inlineHelpText>
    <label>Certification</label>
    <type>Text</type>
</CustomField>