force-app/main/default/objects/Contact_Certifications__c/fields/Certs__c.field-meta.xml
<CustomField>
    <fullName>Certs__c</fullName>
    <description>Master detail to the Certs object</description>
    <inlineHelpText>Master detail to the Certs object</inlineHelpText>
    <label>Certifcation</label>
    <referenceTo>Certs__c</referenceTo>
    <relationshipLabel>Contact Certifications</relationshipLabel>
    <relationshipName>Contact_Certifications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>