force-app/main/default/objects/Contact_Certifications__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Salesforce provided certification classification</description>
    <formula>text(Certs__r.Classification__c)</formula>
    <inlineHelpText>Salesforce provided certification classification</inlineHelpText>
    <label>Classification</label>
    <type>Text</type>
</CustomField>