force-app/main/default/objects/Contact_Certifications__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Lookup from Certification to Contact object</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Certications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>