force-app/main/default/objects/Contact_Certifications__c/fields/Days_To_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Expiration__c</fullName>
    <formula>if ( Expiration_Date__c = null,0,
   (Expiration_Date__c - today()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>