force-app/main/default/objects/Contact_Certifications__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The Date the Certification Expires</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>