force-app/main/default/objects/Contact_Certifications__c/fields/Time_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete__c</fullName>
    <description>The number of days of study taken to prepare and pass the test</description>
    <inlineHelpText>The number of days of study taken to prepare and pass the test. Please enter in sum of work time vs. calendar time.  For example, a month at 50% would be 15 days.</inlineHelpText>
    <label>Time to Complete</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>