force-app/main/default/objects/Contact_Certifications__c/listViews/All_Certifications.listView-meta.xml
<ListView>
    <fullName>All_Certifications</fullName>
    <columns>NAME</columns>
    <columns>Certs__c</columns>
    <columns>Contact__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Days_To_Expiration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Certifications</label>
</ListView>