force-app/main/default/objects/Contact_Certifications__c/listViews/My_Certs.listView-meta.xml
<ListView>
    <fullName>My_Certs</fullName>
    <columns>NAME</columns>
    <columns>Certs__c</columns>
    <columns>Contact__c</columns>
    <columns>Classification__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Days_To_Expiration__c</columns>
    <columns>Time_to_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Certs</label>
</ListView>